--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-hessian/pom.xml
@@ -16,6 +16,7 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
+
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
@@ -25,11 +26,18 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
+
   <artifactId>spring-cloud-starter-huawei-hessian</artifactId>
   <dependencies>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-serialization-hessian2</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>log4j</artifactId>
+          <groupId>log4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
